# n_e_s

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clang_tidy  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  WORKSPACE  appveyor.yml  cpu.cpp  cpu.h  flags.bat  flags.sh  main.cpp
.github/workflows/: ci-bazel.yaml  ci-linux.yaml  ci-nestest.yaml  ci-windows.yaml  pre-commit.yaml
application/: BUILD.bazel  CMakeLists.txt
application/src/: main.cpp  nestest_main.cpp
cmake/: conan.cmake  coverage.cmake  gtest.cmake  sanitizers.cmake
core/: BUILD.bazel  CMakeLists.txt  defs.bzl
core/include/: immu.h
core/include/core/: cpu_factory.h  icpu.h  imembank.h  immu.h  imos6502.h  invalid_address.h  ippu.h  irom.h  membank.h  membank_factory.h  memport.h  mmu_factory.h  opcode.h  ppu_factory.h  rom_factory.h
core/include/nes/core/: apu_factory.h  cpu_factory.h  iapu.h  immu.h  imos6502.h  ines_controller.h  ines_header.h  ippu.h  irom.h  membank_factory.h  mmu_factory.h  nes_controller_factory.h  opcode.h  pixel.h  ppu_factory.h  ppu_registers.h  rom_factory.h
core/src/: apu.cpp  apu.h  apu_factory.cpp  cpu.cpp  cpu.h  cpu_factory.cpp  invalid_address.cpp  mapped_cpu_register.cpp  mapped_cpu_register.h  mapped_membank.h  membank.h  membank_base.h  membank_controller_io.h  membank_factory.cpp  memport.cpp  mmu.cpp  mmu.h  mmu_factory.cpp  mos6502.cpp  mos6502.h  nes_controller.h  nes_controller_factory.cpp  opcode.cpp  opcode.h  pipeline.cpp  pipeline.h  ppu.cpp  ppu.h  ppu_factory.cpp  rom.cpp  rom.h  rom_factory.cpp
core/src/rom/: mapper_2.cpp  mapper_2.h  mapper_3.cpp  mapper_3.h  nrom.cpp  nrom.h
core/test/: CMakeLists.txt
core/test/src/: cast_helpers.h  cpu_test.h  fake_mmu.h  fake_ppu.h  hexprinter.h  icpu_helpers.cpp  icpu_helpers.h  ippu_helpers.cpp  ippu_helpers.h  main.cpp  mock_irom.h  mock_membank.h  mock_mmu.h  mock_ppu.h  opcode.h  test_apu.cpp  test_cpu.cpp  test_cpu_absolute_indexed_instructions.cpp  test_cpu_absolute_instructions.cpp  test_cpu_branch_instructions.cpp  test_cpu_immediate_instructions.cpp  test_cpu_indexed_indirect_instructions.cpp  test_cpu_indirect_indexed_instructions.cpp  test_cpu_move_instructions.cpp  test_cpu_nop_absolute_x_instructions.cpp  test_cpu_nop_implied_instructions.cpp  test_cpu_nop_zeropage_x_instructions.cpp  test_cpu_zeropage_indexed_instructions.cpp  test_cpu_zeropage_instructions.cpp  test_cpuintegration.cpp  test_ines_header.cpp  test_invalid_address.cpp  test_membank.cpp  test_memport.cpp  test_mmu.cpp  test_nes_controller.cpp  test_opcode.cpp  test_ppu.cpp  test_ppu_membank.cpp  test_ppu_registers.cpp  (+1 more)
core/test_utils/: CMakeLists.txt
core/test_utils/include/: mock_nes_controller.h
core/test_utils/include/nes/core/test/: fake_mmu.h  fake_ppu.h  mock_membank.h  mock_mmu.h  mock_ppu.h
disassembler/: BUILD.bazel  CMakeLists.txt
disassembler/include/nes/: disassembler.h
disassembler/src/: disassembler.cpp
disassembler/test/: CMakeLists.txt
disassembler/test/src/: test_disassembler.cpp
nes/: BUILD.bazel  CMakeLists.txt
nes/include/nes/: nes.h
nes/src/: nes.cpp
nes/test/: CMakeLists.txt
nes/test/src/: test_nes.cpp
nestest/: BUILD.bazel  CMakeLists.txt  test_nestest.py
nestest/src/: main.cpp
romtest/: BUILD.bazel  CMakeLists.txt  test_rom.py
romtest/src/: main.cpp
src/application/src/: main.cpp
src/core/: CMakeLists.txt
src/core/src/: cpu.h
warnings/: CMakeLists.txt
