load(":defs.bzl", "private_include_copts")

cc_library(
    name = "core",
    srcs = glob([
        "src/**",
    ]),
    hdrs = glob([
        "include/**/*.h",
    ]),
    copts = private_include_copts(["src/"]),
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "core_test_utils",
    hdrs = glob([
        "test_utils/include/**/*.h",
    ]),
    strip_include_prefix = "test_utils/include/",
    visibility = ["//visibility:public"],
    deps = [
        ":core",
        "@gtest",
        "@fmtlib",
    ],
)

cc_test(
    name = "core_test",
    size = "small",
    srcs = glob([
        "test/src/*.cpp",
        "test/src/*.h",
    ]),
    deps = [
        ":core",
        ":core_test_utils",
        "@gtest",
    ],
)
