cc_binary(
    name = "romtest",
    srcs = ["src/main.cpp"],
    deps = [
        "//core",
        "//nes",
        "@fmtlib",
    ],
)

py_binary(
    name = "test_rom",
    srcs = ["test_rom.py"],
    args = [
        "--romtest-bin",
        "$(rootpath :romtest)",
    ],
    data = [":romtest"],
    main = "test_rom.py",
)
